--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       src="https://kit.fontawesome.com/f13efae607.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="icon" type="image/x-con" href="/assets/favicon.png" />
+    <link rel="icon" type="image/x-con" href="assets/favicon.png" />
   </head>
   <body>
     <div class="container">
