--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
       media="all"
     />
-    <link rel="stylesheet" href="/assets/style.css" />
+    <link rel="stylesheet" href="assets/style.css" />
     <script
       src="https://kit.fontawesome.com/f13efae607.js"
       crossorigin="anonymous"
