refactor: change styles

--- a/index.html
+++ b/index.html
@@ -60,13 +60,16 @@
                 <h2 class="left-side-title">Profile</h2>
               </div>
               <p class="plain-text">
-                Hello. I'm Ruslan and I 'm to become a programmer. I graduated
-                the second course of my university and would like to deepen my
-                knowledge in web developed. Unfortunately, I don't have work
-                experience, but I try to fix that. In my free time I usually
-                read various literature and watch video on Youtube about HTML5,
-                CSS and JavaScript. I also learn English every day. I have
-                learned web technology already two months.
+                <span class="indent">Hello</span>. I'm Ruslan and I'm 22. From
+                time to time I'm into listening to music and just wasting time
+                on the Internet. However, I read various books about programming
+                technologies on a regular basis. I'm skilled with javaScript and
+                C# a bit, but I figure out how they are used correctly step by
+                step every day. I am almost graduated from university and as
+                everyone I want to work in a cool it - company. Once I gain
+                additional experience I'd like to have the the opportunity to
+                move on from junior to middle position as soon as possible. In
+                addition, I want to consolidate and improve my English up to B2.
               </p>
             </section>
             <section class="Languages-section">
@@ -108,34 +111,36 @@
               <h2 class="turquoise-text">Education</h2>
               <div class="line"></div>
               <div class="education-content">
-                <div class="college">
-                  <h5>VSTU</h5>
+                <div class="title-name">
+                  <div>
+                    <h5>VSTU</h5>
+                  </div>
+                  <div>
+                    <p>2019-2023</p>
+                  </div>
                 </div>
-                <div class="qualification">
+                <div class="title-name">
                   <div>
                     <h5>Software engineer</h5>
                   </div>
-                  <div class="about-qualification">
+                  <div class="">
                     <p>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Dolore molestias fugiat non repellendus, soluta,
-                      perferendis obcaecati eaque optio molestiae praesentium
-                      eos. Accusantium recusandae assumenda dolores soluta
-                      explicabo reiciendis corporis est?
+                      <strong>Faculty: </strong>Faculty of Information
+                      Technology and Robotics
                     </p>
                   </div>
                 </div>
               </div>
             </section>
             <section class="courses-section">
-               <h2 class="turquoise-text">Courses and books</h2>
+              <h2 class="turquoise-text">Courses and books</h2>
               <div class="line"></div>
               <ul class="plain-list">
                 <li>English courses at level A2</li>
                 <li>English by playlists</li>
                 <li>JS / Front-end. Stage 0</li>
                 <li>Bible C#</li>
-                <li>AspNet core Mvc 2 by Adam Freeman </li>
+                <li>AspNet core Mvc 2 by Adam Freeman</li>
               </ul>
             </section>
             <section class="expirience-section">
@@ -196,7 +201,7 @@
               <h2 class="turquoise-text">Skills</h2>
               <div class="line"></div>
               <div>
-                <ul  class="plain-list">
+                <ul class="plain-list">
                   <li>Databases (MySql, MongoDB)</li>
                   <li>.net 3.1/.net5, AspNet Core, C#</li>
                   <li>JavaScript, node.js, react.js (basic knowledge)</li>
