feat: add adaptive

--- a/index.html
+++ b/index.html
@@ -10,18 +10,19 @@
       rel="stylesheet"
       media="all"
     />
-    <link rel="stylesheet" href="assets/style.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
     <script
       src="https://kit.fontawesome.com/f13efae607.js"
       crossorigin="anonymous"
     ></script>
     <link rel="icon" type="image/x-con" href="assets/favicon.png" />
+    <link rel="stylesheet" href="assets/css/mediaScreens.css">
   </head>
   <body>
     <div class="container">
       <header>
         <div class="header">
-          <div class="left-side center-content">
+          <div class="left-side center-content ">
             <img src="assets/username.svg" class="img-logo" alt="logo" />
           </div>
           <div class="right-side center-complex-content">
@@ -116,7 +117,7 @@
                     <h5>VSTU</h5>
                   </div>
                   <div>
-                    <p>2019-2023</p>
+                    <p>2019 - 2023</p>
                   </div>
                 </div>
                 <div class="title-name">
