update: add one more project

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
               <h2 class="turquoise-text">My projects</h2>
               <div class="line"></div>
               <div class="list-projects">
-                <figure class="center-complex-content">
+                <figure>
                   <a
                     href="https://rus203.github.io/photofilter/"
                     target="_blank"
@@ -161,7 +161,7 @@
                     <figcaption>Photo - filter</figcaption></a
                   >
                 </figure>
-                <figure class="center-complex-content">
+                <figure>
                   <a
                     href="https://rus203.github.io/vertical-slider/"
                     target="_blank"
@@ -174,7 +174,7 @@
                     <figcaption>Vertical slider</figcaption></a
                   >
                 </figure>
-                <figure class="center-complex-content">
+                <figure>
                   <a href="https://rus203.github.io/mamon/"
                     ><img
                       src="assets/screenshots/mamon.jpg"
@@ -185,7 +185,18 @@
                     <figcaption>Mamon(layout only)</figcaption></a
                   >
                 </figure>
-                <figure class="center-complex-content">
+                <figure>
+                  <a href="https://rus203.github.io/react-basics/"
+                    ><img
+                      src="./assets//screenshots/userList.jpg"
+                      alt="react-basics"
+                      width="150px"
+                      height="100px"
+                    />
+                    <figcaption>Simple user list with authentication</figcaption></a
+                  >
+                </figure>
+                <figure>
                   <a href="#"
                     ><img
                       src="assets/screenshots/newProject.jpg"
@@ -196,6 +207,7 @@
                     <figcaption>Sport store (in progress)</figcaption></a
                   >
                 </figure>
+                
               </div>
             </section>
             <section class="skills-section">
