feat: add a link to the project

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                   >
                 </figure>
                 <figure>
-                  <a href="#"
+                  <a href="https://github.com/Rus203/SportsStore/tree/dev" target="_blank"
                     ><img
                       src="assets/screenshots/newProject.jpg"
                       alt="newProject.png"
